--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,14 +1,29 @@
+.products__section h2{
+  margin: 0 auto;
+  text-align: center;
+  color: var(--color-red);
+  text-transform: uppercase;
+  border-bottom: 1px solid var(--color-red);
+  padding: 20px;
+  width: 90%;
+  font-size: clamp(30px, 3vw, 50px);
+  letter-spacing: 5px;
+
+  }
 .products__container {
-  height: 100vh;
-  margin-top: 80px;
+  height: auto;
+  
   padding: 60px;
   display: flex;
-  gap: 30px;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 6rem;
+  justify-content: center;
+  
 }
 .card__container {
-  width: 25%;
-  height: 720px;
+  width: 90%;
+  max-width: 500px;
+  height: 80vh;
   background: linear-gradient(
     180deg,
     #df3232 0%,
@@ -25,13 +40,16 @@
   justify-content: space-between;
 }
 .card__container h3 {
-  font-size: 40px;
+  font-size: clamp(24px, 4vw, 40px);
   color: var(--color-white);
   margin-top: 20px;
+  position: relative;
+  z-index: 2;
+  text-shadow: 0 0 3px #333;
 }
 .card__img__container {
   max-width: 800px;
-  width: 125%;
+  width: 118%;
   position: relative;
   position: absolute;
   top: 50%;
@@ -55,6 +73,12 @@
   font-size: 20px;
   letter-spacing: 3px;
   font-family: var(--font-1);
-
-  margin-top: 15px;
+ margin-top: 15px;
 }
+@media (max-width: 562px) {
+  .products__container {
+   padding: 20px;
+   gap: 3rem;
+  }
+}
+
