--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -16,6 +16,25 @@
     border: none;
     background-color: transparent;
     cursor: pointer;
+    position: relative;
+  }
+  .navbar__container button span{
+   border-radius: 50%;
+   background-color: rgb(241, 14, 14);
+   color: white;
+   font-size: 16px;
+   height: 20px;
+   width: 20px;
+   display: inline-block;
+   font-weight: 800;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   font-family: var(--font-1);
+   position: absolute;
+   top: -10px;
+   right: -10px;
+   
   }
   .navbar__logo{
     width: 150px ;
