--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,4 +1,4 @@
-.products__section h2{
+.products__section h2 {
   margin: 0 auto;
   text-align: center;
   color: var(--color-red);
@@ -8,17 +8,15 @@
   width: 90%;
   font-size: clamp(30px, 3vw, 50px);
   letter-spacing: 5px;
-
-  }
+}
 .products__container {
   height: auto;
-  
+
   padding: 60px;
   display: flex;
   flex-wrap: wrap;
   gap: 6rem;
   justify-content: center;
-  
 }
 .card__container {
   width: 90%;
@@ -63,22 +61,53 @@
 #card__price {
   color: #333;
 }
+
 .card__btn {
-  width: 100%;
-  padding: 10px;
+  background: var(--color-white);
   border-radius: 10px;
   border: 2px solid var(--color-red);
-  background-color: var(--color-white);
   color: var(--color-red);
-  font-size: 20px;
-  letter-spacing: 3px;
+  cursor: pointer;
+  display: inline-block;
   font-family: var(--font-1);
- margin-top: 15px;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  margin-top: 15px;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  transition: all 0.3s ease;
+  z-index: 0;
+  padding: 10px;
+  width: 100%;
+}
+.card__btn svg{
+  margin-right: 5px;
+  position: relative;
+  top: 3px;
+  font-size: 25px;
+}
+.card__btn:hover {
+  color: #fff;
+}
+.card__btn:hover:after {
+  width: 100%;
+}
+.card__btn:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  transition: all 0.3s ease;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 100%;
+  background: var(--color-red);
 }
 @media (max-width: 562px) {
   .products__container {
-   padding: 20px;
-   gap: 3rem;
+    padding: 20px;
+    gap: 3rem;
   }
 }
-
