--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    border-bottom: 1px solid #ccc;
+    box-shadow: 0 3px 3px #ccc;
     position: sticky;
     top: 0;
     z-index: 10;
