--- a/src/components/auth/auth.css
+++ b/src/components/auth/auth.css
@@ -56,3 +56,37 @@
     font-size: 12px;
     color: red;
 }
+
+.auth__prefix-phone{
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.auth__prefix-phone span{
+padding: 10.5px 8px;
+border: 1px solid #333;
+font-family: var(--font-1);
+font-size: 14px;
+}
+
+.success__container{
+    min-height: 92vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.success__message{
+    max-width: 700px;
+    padding: 30px;
+    text-align: center;
+    border: 1px solid #333;
+    margin: 0 10px;
+}
+.success__message h2{
+   margin-bottom: 20px;
+}
+.success__message p{
+   margin-bottom: 20px;
+}
