--- a/src/components/cart/cartFull.css
+++ b/src/components/cart/cartFull.css
@@ -135,15 +135,16 @@
   color: var(--color-white);
   background-color: var(--color-red);
   border: none;
-  margin: 15px 0;
+  margin: 10px 0;
   transition: all 0.4s;
-  margin-top: 30px;
+  *margin-top: 30px;
   width: 100%;
 }
 
 .cartFull__btn-add:hover {
   transform: scale(1.03);
   box-shadow: 2px 2px 5px rgba(51, 51, 51, 0.932);
+  cursor: pointer;
 }
 
 @media screen and (max-width: 1024px) {
