--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -119,13 +119,13 @@
 .box-wrapper {
   background-color: #fff;
   overflow: hidden;
-  max-width: 320px;
+  *width: 300px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.48);
   padding: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
-  min-height: 515px;
+  
   position: relative;
   text-decoration: none;
   color: var(--color-black);
@@ -204,6 +204,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 0 5px;
+  min-height: 200px;
 }
 .box-content:before {
   content: "";
