--- a/src/components/loading/loading.css
+++ b/src/components/loading/loading.css
@@ -4,13 +4,13 @@
     align-items: center;
     justify-content: center;
 }
-.lds-ring {
+.lds-ring1 {
     display: inline-block;
     position: relative;
     width: 80px;
     height: 80px;
   }
-  .lds-ring div {
+  .lds-ring1 div {
     box-sizing: border-box;
     display: block;
     position: absolute;
@@ -19,19 +19,19 @@
     margin: 8px;
     border: 8px solid var(--color-red);
     border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    animation: lds-ring1 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     border-color: var(--color-red) transparent transparent transparent;
   }
-  .lds-ring div:nth-child(1) {
+  .lds-ring1 div:nth-child(1) {
     animation-delay: -0.45s;
   }
-  .lds-ring div:nth-child(2) {
+  .lds-ring1 div:nth-child(2) {
     animation-delay: -0.3s;
   }
-  .lds-ring div:nth-child(3) {
+  .lds-ring1 div:nth-child(3) {
     animation-delay: -0.15s;
   }
-  @keyframes lds-ring {
+  @keyframes lds-ring1 {
     0% {
       transform: rotate(0deg);
     }
