--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -285,6 +285,45 @@
   padding: 8px;
   border: 1px solid var(--color-black);
 }
+.row{
+  display: flex;
+  *justify-content: space-between;
+  width: 100%;
+}
+.order__btn-detail{
+  background-color: var(--color-red);
+  color: var(--color-white);
+  border: none;
+  border-radius: 5px;
+  flex: 1;
+}
+
+.order__main__right__container {
+  /* display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center; */
+  overflow-x: scroll;
+ 
+}
+.order__overflow{
+  min-width: 600px;
+  padding: 15px 0;
+  line-height: 25px;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+  
+}
+.order__overflow p{
+ flex: 1;
+ text-align: center;
+}
+.order__overflow h4{
+ flex: 1;
+ text-align: center;
+}
 
 @media (max-width: 768px) {
   .profile__menu__left {
