--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -285,3 +285,43 @@
 .box-content .footer ul li {
   color: #efd829;
 }
+@media (max-width: 7680px) {
+  .box-content {
+    min-width: 300px;
+  }
+}
+
+/* -------------------Mobile------------------------- */
+.productCardMobile__container{
+  width: 100%;
+  min-height: 150px;
+  display: flex;
+  margin-bottom: 10px;
+  color: var(--color-black);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.48);
+  
+  
+}
+.productCardMobile__img{
+  max-width: 120px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+.productCardMobile__img img{
+width: 100%;
+}
+.productCardMobile__info .title{
+  font-family: var(--font-1);
+  font-size: 18px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.productCardMobile__info .price{
+  font-family: var(--font-1);
+  font-size: 20px;
+ display: inline-block;
+ margin-top: 10px;
+}
+
