--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -43,12 +43,26 @@
   transform: translate(-50%, -50%);
 }
 
-@media (max-width: 1015px) {
+ @media (max-width: 1015px) {
   .category__container {
-    padding: 30px 0px;
-    gap: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 30px 10px;
+    gap: 50px;
   }
   .category__card {
     width: 45%;
   }
-}
+} 
+  @media (max-width: 768px) {
+  
+    .category__container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 30px 10px;
+      gap: 10px;
+    }
+   
+}  
