--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -1,5 +1,5 @@
 .slider__container {
-  padding: 60px clamp(10px, 3vw, 100px);
+  padding: clamp(20px, 3vw, 60px) clamp(10px, 3vw, 100px);
   *margin: 0 5%;
 }
 .slider__container h2{
@@ -23,7 +23,7 @@
 }
 
 .mySwiper {
-  padding: 50px;
+  padding: clamp(40px, 3vw, 50px) ;
   padding-right: 40px;
   padding-left: 40px;
 }
